--- a/wad/Cargo.toml
+++ b/wad/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 byteorder = "1.4.3"
+num-traits = "0.2.15"
 serde = { version = "1.0.147", features = ["derive"] }
 thiserror = "1.0.37"
