--- a/smoosh/Cargo.toml
+++ b/smoosh/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "wad"
+name = "smoosh"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-byteorder = "1.4.3"
-thiserror = "1.0.37"
+wad = { version = "0.1.0", path = "../wad" }
